--- a/examples/zhuiyi/s1/conf/train_k2_distilation.yaml
+++ b/examples/zhuiyi/s1/conf/train_k2_distilation.yaml
@@ -2,8 +2,8 @@ accum_grad: 16
 cmvn_file: asr_model_v4.5.0/self_learning/exp/global_cmvn
 dataset_conf:
   batch_conf:
-    batch_size: 48
-    batch_type: dynamic
+    batch_size: 16
+    batch_type: static
     max_frames_in_batch: 24000
   fbank_conf:
     dither: 1.0
@@ -57,7 +57,7 @@ encoder_conf:
   positional_dropout_rate: 0.1
   selfattention_layer_type: rel_selfattn
   use_cnn_module: true
-  use_dynamic_chunk: true
+  use_dynamic_chunk: false
   use_dynamic_left_chunk: false
 grad_clip: 5
 input_dim: 80
@@ -69,7 +69,7 @@ model_conf:
   length_normalized_loss: false
   lsm_weight: 0.1
   num_codebooks: 8
-  codebook_weigth: 0.2
+  codebook_weigth: 0.1
 optim: adam
 optim_conf:
   lr: 0.002
